--- a/src/index.css
+++ b/src/index.css
@@ -475,7 +475,8 @@ button[aria-disabled='true'] {
     grid-template-columns: 1fr;
   }
 
-  .col-span-2 {
+  .col-span-2,
+  .col-span-4 {
     grid-column: span 1;
   }
 }
